<resources>
    <string name="app_name">Spacetoon</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="lorem">description ipsum dolor sit amet consectetur. Viverra viverra molestie tristique et dapibus amet sodales nunc. Blandit viverra aliquet cras sed. Placerat adipiscing ac consectetur tincidunt. Ornare enim amet vel egestas mi blandit penatibus eros. Amet neque eget imperdiet vitae scelerisque pharetra sed.</string>
    <string name="season_4">Season 4</string>
    <string name="next">Next</string>
    <string name="season_3">Season 3</string>
    <string name="season_2">Season 2</string>
    <string name="season_1">Season 1</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="share">Share</string>
    <string name="tv_series_name">TV Series Name</string>
    <string name="conan">Conan</string>
    <string name="super_wings">Super Wings</string>
    <string name="_2009">2009</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="the_fairly_odd_parents">The Fairly Odd Parents</string>
    <string name="_2016">2016</string>
    <string name="_2001">2001</string>
    <string name="masha_and_the_bear">Masha and the Bear</string>
    <string name="_2005">2005</string>
    <string name="thomas_amp_friends"><![CDATA[Thomas & Friends]]></string>
    <string name="_2015">2015</string>
    <string name="mlp">My Little Pony</string>
    <string name="_2008">2008</string>
    <string name="profile">Profile</string>
    <string name="app_logo">App logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or Register With</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google">Login with google</string>
    <string name="login_with_twitter">Login with twitter</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="action">Action</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="back_to_login">Back to Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_all">View All</string>
    <string name="adventure">Adventure</string>
    <string name="sports">Sports</string>
    <string name="search">Search</string>
</resources>