<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/spacetoonLogoIv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/spacetoon_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEt"
        style="@style/LoginEditTextStyle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacetoonLogoIv" />

    <EditText
        android:id="@+id/passwordEt"
        style="@style/LoginEditTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEt" />

    <TextView
        android:id="@+id/forgotPasswordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="#994E4E4E"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/passwordEt"
        app:layout_constraintTop_toBottomOf="@id/passwordEt" />

    <Button
        android:id="@+id/signInBtn"
        style="@style/RoundedButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/passwordEt"
        app:layout_constraintStart_toStartOf="@id/passwordEt"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTv" />

    <TextView
        android:id="@+id/signInOptionsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/or_sign_in_with"
        android:textColor="#B345392C"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/signInBtn"
        app:layout_constraintStart_toStartOf="@id/signInBtn"
        app:layout_constraintTop_toBottomOf="@id/signInBtn" />

    <ImageView
        android:id="@+id/fbIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login_with_facebook"
        android:src="@drawable/facebook_icon"
        app:layout_constraintEnd_toStartOf="@id/googleIv"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/signInOptionsTv"
        app:layout_constraintTop_toBottomOf="@id/signInOptionsTv" />


    <ImageView
        android:id="@+id/googleIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login_with_google"
        android:src="@drawable/google_icon"
        app:layout_constraintEnd_toStartOf="@id/twitterIv"
        app:layout_constraintStart_toEndOf="@id/fbIv"
        app:layout_constraintTop_toBottomOf="@id/signInOptionsTv" />

    <ImageView
        android:id="@+id/twitterIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login_with_twitter"
        android:src="@drawable/twitter_icon"
        app:layout_constraintEnd_toEndOf="@id/signInOptionsTv"
        app:layout_constraintStart_toEndOf="@id/googleIv"
        app:layout_constraintTop_toBottomOf="@id/signInOptionsTv" />

    <TextView
        android:id="@+id/noAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#B345392C"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/signUpTv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleIv" />


    <TextView
        android:id="@+id/signUpTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:text="@string/sign_up"
        android:textColor="#EB9F4A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/noAccountTv"
        app:layout_constraintTop_toBottomOf="@id/googleIv" />

</androidx.constraintlayout.widget.ConstraintLayout>