<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="56dp"
    android:background="#EB9F4A"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="3"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:showIn="@layout/layout_favorites">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/home"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/round_home_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/favorites"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/baseline_favorite_selected_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/profile"
        android:textAlignment="center"
        app:drawableTopCompat="@drawable/baseline_person_24" />
</LinearLayout>
