<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:title="@string/home" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:scrollbars="none">

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/SliderStyle"
                        android:src="@drawable/slider1"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/SliderStyle"
                        android:src="@drawable/slider2"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/SliderStyle"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/slider3"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />
                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout style="@style/CategoryLayoutStyle">

                <TextView
                    style="@style/CategoryTextViewStyle"
                    android:text="@string/action"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    style="@style/CategorySeeAllStyle"
                    android:text="@string/view_all"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category1"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category2"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category3"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category4"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/category5"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />


                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout style="@style/CategoryLayoutStyle">

                <TextView
                    style="@style/CategoryTextViewStyle"
                    android:text="@string/adventure"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    style="@style/CategorySeeAllStyle"
                    android:text="@string/view_all"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category6"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category6"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category6"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category6"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/category6"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />


                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout style="@style/CategoryLayoutStyle">

                <TextView
                    style="@style/CategoryTextViewStyle"
                    android:text="@string/sports"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    style="@style/CategorySeeAllStyle"
                    android:text="@string/view_all"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="62dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category7"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category7"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category7"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:src="@drawable/category7"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />

                    <com.google.android.material.imageview.ShapeableImageView
                        style="@style/CategoryItemStyle"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/category7"
                        app:shapeAppearanceOverlay="@style/RoundedImageView" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/item_home_bottom_navigation" />
</androidx.constraintlayout.widget.ConstraintLayout>